err/match-maker.err
Listing '.'...
Listing './FRmodels'...
Listing './bin'...
Listing './docs'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Match_Maker-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/matchmaker'...
Listing './lib/python3.5/site-packages/matchmaker/core'...
Listing './lib/python3.5/site-packages/matchmaker/input'...
Listing './lib/python3.5/site-packages/matchmaker/libs'...
Compiling './lib/python3.5/site-packages/matchmaker/libs/UFO2MM.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/UFO2MM.py", line 303
    print "usage: python2 UFO2MM UFOmodelpath modeldirectory"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/create_MM_model.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (create_MM_model.py, line 57)
Compiling './lib/python3.5/site-packages/matchmaker/libs/file.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/file.py", line 43
    print "testing the function diagonaliza"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/generate_form.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/generate_form.py", line 82
    print "parts=",particles
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/match_model.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/match_model.py", line 29
    print "Model directory "+modeldir+" does not exist"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/run_all.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/run_all.py", line 30
    print "Model directory "+modeldir+" does not exist"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/run_form.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/run_form.py", line 8
    print file
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/run_qgraf.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/run_qgraf.py", line 16
    print "doing directory",dirname
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/matchmaker/libs/test_model_creation.py'...
***   File "./lib/python3.5/site-packages/matchmaker/libs/test_model_creation.py", line 27
    print x, " good agreement"
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/matchmaker/models'...
Listing './lib/python3.5/site-packages/matchmaker/models/L4SM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L4SM/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L4SM/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/matchmaker/models/L4SM/QGRAF'...
Listing './lib/python3.5/site-packages/matchmaker/models/L4SM/QGRAF/model_data'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_0F'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_0F/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_0F/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_0F/QGRAF'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_0F/QGRAF/model_data'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_0S_3D'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_0S_3D/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_0S_3D/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_0S_3D/QGRAF'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_0S_3D/QGRAF/model_data'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_1S_2D'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_1S_2D/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_1S_2D/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_1S_2D/QGRAF'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_1S_2D/QGRAF/model_data'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_2S_1D'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_2S_1D/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_2S_1D/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_2S_1D/QGRAF'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_2S_1D/QGRAF/model_data'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_3S_0D'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_3S_0D/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_3S_0D/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_3S_0D/QGRAF'...
Listing './lib/python3.5/site-packages/matchmaker/models/L6SM_2F_3S_0D/QGRAF/model_data'...
Listing './lib/python3.5/site-packages/matchmaker/source'...
Listing './lib/python3.5/site-packages/matchmaker/source/L2SM'...
Listing './lib/python3.5/site-packages/matchmaker/source/L2SM/FORM'...
Listing './lib/python3.5/site-packages/matchmaker/source/L2SM/FORM/proc_0loop'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
